--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
            <div class="row " >
             <div class="col-sm-6">
-                <img src="images/thiruvalluvar.png"  height="300">
+                <img src="thiruvalluvar.png"  height="300">
             </div>
 
             <div class="col-sm-6  text_color">
